@@ -166,7 +166,7 @@ class SecurityProfile
      */
     public function &getXPath()
     {
-        $str = $this->owner->getAddressStoreXPath() . "/entry[@name='" . $this->name . "']";
+        $str = $this->owner->getSecurityProfileStoreXPath() . "/entry[@name='" . $this->name . "']";
 
         return $str;
     }
